--- a/styles/style.css
+++ b/styles/style.css
@@ -87,6 +87,14 @@ p
 	font-size: 70px;
 }
 
+.btn
+{
+	padding: 0.5rem;
+	background-color: #E56C00;
+	color: black;
+	border-radius: 5px;
+}
+
 /*Animación*/
 @keyframes float
 {
@@ -97,7 +105,7 @@ p
 }
 
 /* Media queries*/
-@media all and (min-width: 769px)
+@media (min-width: 769px)
 {
 	h1
 	{
