--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,11 @@ figure
 
 h1, h2, h3, h4, h5, h6
 {
+	font-family: 'Raleway', sans-serif;
+}
+
+h1
+{
 	color: #D74932;
 	font-size: 50px !important;
 	text-shadow: 4px 4px 5px rgba(0,0,0,0.5);
