--- a/styles/style.css
+++ b/styles/style.css
@@ -25,11 +25,6 @@ h1
 	text-shadow: 4px 4px 5px rgba(0,0,0,0.5);
 }
 
-p
-{
-	font-weight: 300;
-}
-
 .content
 {
 	text-align: center;
@@ -79,6 +74,8 @@ p
 {
 	font-size: 25px;
 	margin: 5px 0 10px 0;
+	text-transform: uppercase;
+	letter-spacing: 5px;
 }
 
 .infoContent .block
@@ -107,6 +104,8 @@ p
 .btn:hover
 {
 	transform: scale(1.2);	
+	letter-spacing: 3px;
+	color: white;
 }
 
 /*Animación*/
