--- a/styles/style.css
+++ b/styles/style.css
@@ -93,8 +93,8 @@ h1
 {
 	padding: 10px 20px;
 	border-radius: 5px;
-	border: #F0B708;
-	background-color: blue;
+	border: 2px solid #F0B708;
+	background-color: #1F7AF7;
 	color: black;
 	margin: 10px 0;
 	display: inline-block;
