--- a/styles/style.css
+++ b/styles/style.css
@@ -79,6 +79,8 @@ h1
 	margin: 5px 0 10px 0;
 	text-transform: uppercase;
 	letter-spacing: 5px;
+	color: #528FC7;
+	text-shadow: 2px 2px 3px white;
 }
 
 .infoContent .block
